--- a/1_DataProcessing_.ipynb
+++ b/1_DataProcessing_.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "1. DataProcessing_.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1wfnYpLmU--c0xU11_E_gmlWaFLgoHDfv",
-      "authorship_tag": "ABX9TyN+yyQL8Onx9MhcETVradCm",
+      "authorship_tag": "ABX9TyOEejruh49ijgDZ/PuZa995",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -63,7 +64,7 @@
         "outputId": "afaf5196-01ec-4bbe-cf18-f4b3f292c57e"
       },
       "source": [
-        "#navigate to a desired path in drive and first upload the dataset in Tr0.zip (found in this git repo)\n",
+        "#navigate to a desired path in drive and first upload an image dataset (in this case it is Tr0.zip)\n",
         "#set the path accordingly\n",
         "!ls \"/content/drive/My Drive/BidwatPhotosSample/\" # shows all files in your google drive root, including the project data file Tr0\n",
         "path = \"/content/drive/My Drive/BidwatPhotosSample/\" # sets the path to the root with the file Tr0"
@@ -106,7 +107,7 @@
         "dnam = 'Tr0'\n",
         "!unzip -q {dnam} # unzups the project file Tr0"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
